# canonrs

./: .gitignore  CANON_RULES.md  Cargo.toml  LICENCE  LICENSE-MIT  Makefile  README.md  WASM_OPTIMIZATION.md  llm.yaml  llm_auto.yaml
canonrs/: BUILD.md  Cargo.toml  build.rs
canonrs-behaviors/: Cargo.toml
canonrs-behaviors/src/: lib.rs
canonrs-behaviors/src/behaviors/: BEHAVIOR_REGISTRY.md  accordion_behavior.rs  auto_init.rs  behavior_registry.rs  breadcrumb_behavior.rs  carousel_behavior.rs  chart_behavior.rs  chart_sync_behavior.rs  checkbox_behavior.rs  collapsible_behavior.rs  combobox_behavior.rs  command_behavior.rs  context_menu_behavior.rs  copy_button_behavior.rs  data_table_behavior.rs  datatable_behavior.rs  dialog_behavior.rs  doc_progress_behavior.rs  drag_drop_behavior.rs  drawer_behavior.rs  dropdown_menu_behavior.rs  hover_card_behavior.rs  icon_button_behavior.rs  icon_toggle_behavior.rs  list_behavior.rs  list_item_behavior.rs  markdown_behavior.rs  markdown_toolbar_behavior.rs  menubar_behavior.rs  mod.rs  modal_behavior.rs  navigation_menu_behavior.rs  overlay_behavior.rs  pagination_behavior.rs  popover_behavior.rs  radio_behavior.rs  resizable_behavior.rs  resizable_behavior.rs.bak  resize_handle_behavior.rs  scroll_area_behavior.rs  (+13 more)
canonrs-behaviors/src/themes/: engine.rs
canonrs-client/: Cargo.toml  README.md
canonrs-client/assets/js/: canon-loader.js  canonrs-manifest.json  canonrs.bundle.js  wasm_hash.js
canonrs-client/assets/wasm/: canonrs_interactions.js  canonrs_interactions_bg.wasm
canonrs-client/src/: lib.rs
canonrs-client/src/behaviors/: accordion_behavior.rs  alert.rs  alert_behavior.rs  auto_init.rs  behavior_discovery.rs  behavior_error.rs  behavior_registry.rs  breadcrumb_behavior.rs  button_behavior.rs  button_group_behavior.rs  calendar_behavior.rs  carousel_behavior.rs  chart_behavior.rs  chart_sync_behavior.rs  checkbox_behavior.rs  collapsible_behavior.rs  color_picker_behavior.rs  combobox_behavior.rs  command_behavior.rs  context_menu_behavior.rs  copy_button_behavior.rs  data_table_behavior.rs  dialog_behavior.rs  doc_progress_behavior.rs  dom_utils.rs  drag_drop_behavior.rs  drawer_behavior.rs  dropdown_menu_behavior.rs  hover_card_behavior.rs  icon_button_behavior.rs  icon_toggle_behavior.rs  input_behavior.rs  input_group_behavior.rs  input_otp_behavior.rs  link_behavior.rs  list_behavior.rs  list_item_behavior.rs  markdown_behavior.rs  markdown_toolbar_behavior.rs  menubar_behavior.rs  (+29 more)
canonrs-client/src/engines/: chart_engine.rs
canonrs-client/src/hooks/: canvas_reactive.rs  mod.rs  select_reactive.rs
canonrs-client/src/interactions/: alert_dialog.rs  avatar.rs  breadcrumb.rs  carousel.rs  chart.rs  color_picker.rs  combobox.rs  confirm_dialog.rs  context_menu.rs  copy_button.rs  data_table.rs  dialog.rs  drawer.rs  dropdown_menu.rs  hover_card.rs  link_group.rs  list_item.rs  markdown.rs  menubar.rs  mod.rs  modal.rs  pagination.rs  popover.rs  radio.rs  resizable.rs  scroll_area.rs  select.rs  sheet.rs  sidebar.rs  slider.rs  table.rs  toggle_group.rs  toolbar.rs  tree.rs  virtual_list.rs
canonrs-client/src/loader/: canon-init-loader.js  canon-loader.js  canonrs.bundle.js
canonrs-client/src/runtime/: detect.rs  init.rs  mod.rs
canonrs-client/src/themes/: engine.rs  mod.rs  registry.rs
canonrs-client/src/ui/: avatar.rs  button.rs  mod.rs
canonrs-core/: Cargo.toml  README.md  SSOT_AUDIT.md  build.rs  build.rs.patch  components.toml  schema.json
canonrs-core/src/: CANON_LLM_RULES.md  CANON_SYSTEM_PROMPT.md  behavior_engine.rs  block_types.rs  canvas_state.rs  catalog_types.rs  dom_contract.rs  lib.rs  meta.rs  meta_types.rs  prelude.rs  state_engine.rs
canonrs-core/src/density/: density_provider.rs  density_types.rs
canonrs-core/src/design/: README.md  mod.rs
canonrs-core/src/infra/: constraint_engine.rs  mod.rs  slot.rs  state_engine.rs  uid.rs  validate.rs
canonrs-core/src/language/: language_provider.rs
canonrs-core/src/primitives/: accordion.rs  alert.rs  alert_dialog.rs  animate.rs  aspect_ratio.rs  avatar.rs  badge.rs  (+96 more)
canonrs-interactions/: Cargo.toml
canonrs-interactions-data/: Cargo.toml
canonrs-interactions-data/src/: chart.rs  data_table.rs  lib.rs  list_item.rs  table.rs  table_row_sheet_preview.rs  virtual_list.rs
canonrs-interactions-gesture/: Cargo.toml
canonrs-interactions-gesture/src/: carousel.rs  lib.rs  resizable.rs  scroll_area.rs  slider.rs
canonrs-interactions-init/: Cargo.toml
canonrs-interactions-init/src/: CREATE_AND_REGISTER_INIT.md  alert.rs  animate.rs  avatar.rs  banner.rs  button.rs  checkbox.rs  collapsible.rs  command.rs  doc_progress.rs  field.rs  filter.rs  form.rs  icon_button.rs  input.rs  input_group.rs  input_otp.rs  lib.rs  loading_overlay.rs  markdown.rs  menu.rs  nav_item.rs  navigation_menu.rs  progress.rs  radio.rs  switch.rs  table.rs  table_of_contents.rs  table_row_sheet_preview.rs  toast.rs  toggle.rs  tooltip.rs
canonrs-interactions/src/: lib.rs
canonrs-server/: Cargo.toml  PRELUDE_INSTRUCTIONS.md  README.md  build.rs
canonrs-server/src/: ARCHITECTURE.md  HOW_USE_BLOCKS_AND_PRIMITIVES.md  dev.rs  lib.rs  prelude.rs  primitives.rs
canonrs-server/styles/: README.md  THEME_FLOW.md  canonrs.bundle.css  canonrs.css  global.css  index.css
canonrs-server/themes-engine/: build.ts  package.json
canonrs-shared/: Cargo.toml
canonrs-shared/src/: lib.rs
canonrs-ui/: Cargo.toml  token-engine.js
canonrs-ui-interactive/: Cargo.toml
canonrs-ui-interactive/src/: lib.rs
canonrs-ui/src/: lib.rs
canonrs-ui/styles/: canonrs.bundle.css  canonrs.css
canonrs-ui/themes-engine/: README.md
canonrs/src/: lib.rs
crates/rs-design/: CANON.md  Cargo.toml  SNAPSHOT.md  mod.rs  ui_config.toml
examples/leptos-basic/: Cargo.toml  README.md
examples/workbench/: Cargo.toml  index.html
tools/: ARCHITECTURE.md  Cargo.toml  README.md
tools/canonrs-cli/: CLI_QUICKSTART.md  Cargo.toml  FUTURO.md  MAINTENANCE.md
tools/canonrs-orchestrator/: Cargo.toml  WASM_FLOW.md  orchestrator_pipeline.md
tools/src/: detect.rs  main.rs  validate.rs
(+3263 files in other folders)
