[workspace]
resolver = "2"
members = [
    "tools/canonrs-cli",
    "canonrs-tokens",
    "canonrs",
    "canonrs-core",
    "canonrs-client",
    "canonrs-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["CanonRS Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/canonrs"

[workspace.dependencies]
leptos = { version = "0.8", default-features = false }
leptos_meta = { version = "0.8", default-features = false }
leptos_router = { version = "0.8", default-features = false }
leptos_axum = { version = "0.8" }
axum = { version = "0.8" }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5" }
tower-http = { version = "0.6" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
wasm-bindgen = { version = "0.2" }
web-sys = { version = "0.3" }
js-sys = { version = "0.3" }
wasm-bindgen-futures = { version = "0.4" }
canonrs-core = { path = "canonrs-core" }
canonrs-client = { path = "canonrs-client" }
canonrs-server = { path = "canonrs-server", default-features = false }

[workspace.lints.rust]
unused_imports = "deny"
unused_variables = "deny"
dead_code = "deny"
unused_mut = "deny"
unused_parens = "deny"
