[package]
name = "canonrs-client"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
leptos = { version = "0.8", default-features = false }
canonrs-core = { path = "../canonrs-core" }
time = { version = "0.3", features = ["macros", "formatting", "parsing"] }
js-sys = "0.3"
uuid = { version = "1", features = ["v4", "js", "serde"] }
web-sys = { version = "0.3", features = [
    "Window", "Storage", "MediaQueryList", "Document", "Element", "HtmlElement", "NodeList",
    "Node", "Event", "MouseEvent", "KeyboardEvent", "MutationObserver",
    "MutationObserverInit", "EventTarget", "HtmlInputElement",
    "CssStyleDeclaration", "console", "IntersectionObserver",
    "IntersectionObserverInit", "IntersectionObserverEntry",
    "HtmlCanvasElement", "CanvasRenderingContext2d", "DomRect",
    "CustomEvent", "CustomEventInit", "PointerEvent", "FocusEvent",
    "Blob", "Url", "HtmlAnchorElement", "FileList", "File", "FileReader",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
once_cell = "1"
ctor = { version = "0.2", optional = true }

[features]
default = []
hydrate = ["leptos/hydrate", "canonrs-core/hydrate", "ctor"]

[lints]
workspace = true
