[package]
name = "canonrs-core"
version = "0.1.0"
edition = "2021"

[features]
default = []
hydrate = ["leptos/hydrate"]
ssr = ["leptos/ssr"]

[dependencies]
canonrs-style = { path = "../canonrs-style" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
leptos = { version = "0.8", default-features = false }

[lints]
workspace = true

[build-dependencies]
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
