[package]
name = "canonrs-interactions-gesture"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window", "Document", "Element", "HtmlElement",
    "EventTarget", "MouseEvent", "PointerEvent",
    "CssStyleDeclaration", "DomRect", "NodeList",
    "console", "FocusEvent", "KeyboardEvent",
    "TouchEvent", "WheelEvent", "ResizeObserver",
    "ResizeObserverEntry", "ResizeObserverSize",
] }

[features]
default = []
