[package]
name = "canonrs-interactions-init"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "Window", "Document", "Element", "HtmlElement",
  "EventTarget", "MouseEvent", "KeyboardEvent",
  "DomTokenList", "CssStyleDeclaration",
  "console", "Navigator", "Clipboard",
  "NodeList", "Node", "MutationObserver",
  "MutationObserverInit", "MutationRecord",
  "Location",
  "FocusEvent",
  "EventListener",
  "HtmlInputElement",
] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = "s"
lto = true
