[package]
name = "canonrs-interactions"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "NodeList", "Node", "MutationObserver", "MutationObserverInit", "MutationRecord"] }
canonrs-interactions-init      = { path = "../canonrs-interactions-init" }
canonrs-interactions-nav       = { path = "../canonrs-interactions-nav" }
canonrs-interactions-data      = { path = "../canonrs-interactions-data" }
canonrs-interactions-gesture   = { path = "../canonrs-interactions-gesture" }
canonrs-interactions-overlay   = { path = "../canonrs-interactions-overlay" }
canonrs-interactions-selection = { path = "../canonrs-interactions-selection" }
canonrs-interactions-content   = { path = "../canonrs-interactions-content" }

[lints]
workspace = true
