[package]
name = "canonrs-shared"
version = "0.1.0"
edition = "2021"

[features]
default = []
hydrate = ["leptos/hydrate"]
ssr = ["leptos/ssr"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
leptos = { version = "0.8", default-features = false }
