[package]
name = "canonrs-ui-interactive"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
leptos = { version = "0.8", default-features = false }
canonrs-ui = { path = "../canonrs-ui", default-features = false }
canonrs-shared = { path = "../canonrs-shared" }
time = { version = "0.3", features = ["macros", "formatting", "parsing"] }
js-sys = "0.3"
uuid = { version = "1", features = ["v4", "js", "serde"] }
web-sys = { version = "0.3", features = ["Element", "NodeList", "DomRect"] }
serde = { version = "1.0.228", features = ["derive"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
wasm-bindgen-futures = "0.4.58"
serde_json = "1.0.149"

[features]
default = []

hydrate = [
  "leptos/hydrate",
  "canonrs-ui/hydrate",
]
