[package]
name = "canonrs"
version = "0.1.0"
edition = "2021"

[dependencies]
canonrs-core = { path = "../canonrs-core" }
canonrs-server = { path = "../canonrs-server", default-features = false, optional = true }
canonrs-client = { path = "../canonrs-client", optional = true }

[features]
default = []
ssr = ["dep:canonrs-server", "canonrs-server/ssr", "canonrs-core/ssr"]
hydrate = ["dep:canonrs-server", "canonrs-server/hydrate", "dep:canonrs-client", "canonrs-client/hydrate", "canonrs-core/hydrate"]
