[package]
name = "canonrs-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "canonrs"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
colored = "2"

[dev-dependencies]
tempfile = "3"
