[package]
name = "rs-design"
version = "0.1.0"
edition = "2021"
authors = ["Cristiano <cristiano@example.com>"]
description = "Enterprise Design System for Leptos - Inspired by shadcn/ui"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
# Core Leptos
leptos = { version = "0.8", features = ["csr"] }
leptos_router = { version = "0.8", optional = true }

# Icons
leptos_icons = "0.7"

# UI Helpers
leptos_ui = "0.3"

# Enum utilities
strum = { version = "0.27", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Styling
tw_merge = "0.1"

# Utilities
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "1.19.0", features = ["v4"] }
regex = "1.12.2"
js-sys = "0.3.83"

# Web APIs
[dependencies.web-sys]
version = "0.3"
features = [
    # Window & Document
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlButtonElement",
    "HtmlFormElement",
    "HtmlDivElement",
    "HtmlSpanElement",
    
    # Events
    "Event",
    "EventTarget",
    "MouseEvent",
    "KeyboardEvent",
    "FocusEvent",
    "InputEvent",
    "SubmitEvent",
    
    # Storage & State
    "Storage",
    "MediaQueryList",
    
    # DOM Manipulation
    "Node",
    "NodeList",
    "DomTokenList",
    "CssStyleDeclaration",
    
    # Forms
    "FormData",
    "ValidityState",
    
    # Canvas (for charts)
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    
    # Other
    "Location",
    "History",
    "Url",
]

[features]
default = []
router = ["leptos_router"]
ssr = ["leptos/ssr"]
hydrate = ["leptos/hydrate"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
uuid = { version = "1.0", features = ["v4"] }

regex = "1.10"
