[package]
name = "canonrs-workbench"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Canon Design System - Leptos UI Framework"
repository = "https://github.com/your-org/canonrs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1"
rs-design = { path = "../../crates/rs-design" }
leptos = { version = "0.8.0", features = ["nightly"] }
leptos_router = { version = "0.8.0", features = ["nightly"] }
leptos_meta = { version = "0.8.0" }
leptos-use = "0.14"
wasm-bindgen = "0.2.106"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Canon dependencies
canonrs-core = { path = "../../crates/canonrs-core" }
canonrs-ui = { path = "../../crates/canonrs-ui" }
canonrs-blocks = { path = "../../crates/canonrs-blocks" }
canonrs-leptos = { path = "../../crates/canonrs-leptos" }

[dependencies.web-sys]
version = "0.3"

[features]
default = ["csr"]
csr = ["leptos/csr", "leptos/hydrate"]
hydrate = ["leptos/hydrate"]
ssr = ["leptos/ssr"]

